# fatcache

./: .gitignore  CONTRIBUTING.md  ChangeLog  Makefile.am  NOTICE  README.md  configure.ac
notes/: coding_style.txt  draft.md  performance.md  spec.md
scripts/: memcache-check.sh
src/: Makefile.am  fc.c  fc.h  fc_aio.c  fc_aio.h  fc_array.c  fc_array.h  fc_client.c  fc_client.h  fc_common.h  fc_connection.c  fc_connection.h  fc_core.c  fc_core.h  fc_event.c  fc_event.h  fc_item.c  fc_item.h  fc_itemx.c  fc_itemx.h  fc_log.c  fc_log.h  fc_mbuf.c  fc_mbuf.h  fc_memcache.c  fc_memcache.h  fc_message.c  fc_message.h  fc_queue.h  fc_request.c  fc_response.c  fc_server.c  fc_server.h  fc_settings.h  fc_sha1.c  fc_sha1.h  fc_signal.c  fc_signal.h  fc_slab.c  fc_slab.h  (+11 more)
